Added new_sudo.sh, which creates a new sudoer in our DO droplet.

--- a/TexDBook.conf
+++ b/TexDBook.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName 206.189.226.167
+    ServerName 206.189.226.167/TexDBook
     WSGIScriptAlias / /var/www/TexDBook/TexDBook.wsgi
     <Directory /var/www/TexDBook/TexDBook/>
         Order allow,deny
