--- a/template.conf
+++ b/template.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName 206.189.226.167
+    ServerName 206.189.226.167/${AppName}
     WSGIScriptAlias / /var/www/${AppName}/${AppName}.wsgi
     <Directory /var/www/${AppName}/${AppName}/>
         Order allow,deny
