Trying to get Flask to work with Apache2 correctly.

--- a/template.conf
+++ b/template.conf
@@ -5,8 +5,8 @@
         Order allow,deny
         Allow from all
     </Directory>
-    Alias /static /var/www/${AppName}/${AppName}/static
-    <Directory /var/www/${AppName}/${AppName}/static/>
+    Alias /dist /var/www/${AppName}/${AppName}/dist
+    <Directory /var/www/${AppName}/${AppName}/dist/>
         Order allow,deny
         Allow from all
     </Directory>
