--- a/TexDBook/package.json
+++ b/TexDBook/package.json
@@ -25,14 +25,20 @@
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
     "html-webpack-plugin": "^3.2.0",
-    "html-minifier": "^3.5.15"
+    "html-minifier": "^3.5.15",
+    "@types/express": "^4.11.1",
+    "@types/react": "^16.3.14",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-router": "^4.0.25",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/node": "^10.0.6"
   },
   "dependencies": {
-    "@types/express": "^4.11.1",
-    "@types/mongoose": "^5.0.13",
-    "@types/node": "^10.0.6",
     "express": "^4.16.3",
-    "mongoose": "^5.0.17",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "node-isbn": "^1.4.0"
   },
   "main": "dist/TexDBook.js",
