--- a/TexDBook/package.json
+++ b/TexDBook/package.json
@@ -20,10 +20,11 @@
   },
   "devDependencies": {
     "typescript": "^2.8.3",
-    "ts-loader": "^4.3.0",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
+    "ts-loader": "^4.3.0",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "html-minifier": "^3.5.15",
     "@types/express": "^4.11.1",
@@ -31,6 +32,7 @@
     "@types/react-dom": "^16.0.5",
     "@types/react-router": "^4.0.25",
     "@types/react-router-dom": "^4.2.6",
+    "@types/reactstrap": "^5.0.26",
     "@types/node": "^10.0.6"
   },
   "dependencies": {
@@ -39,6 +41,9 @@
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "jquery": "^3.3.1",
+    "bootstrap": "^4.1.1",
+    "reactstrap": "^6.0.1",
     "node-isbn": "^1.4.0"
   },
   "main": "dist/TexDBook.js",
