Trying to serve over HTTPS and redirect HTTP to HTTPS.

--- a/template.conf
+++ b/template.conf
@@ -1,6 +1,13 @@
 <VirtualHost *:80>
-    ServerName 206.189.226.167
+    ServerName ${Domain}
+    Redirect / https://${Domain}
+</VirtualHost>
+
+<VirtualHost *:443>
+    SSLEngine on
+    ServerName ${Domain}
     WSGIScriptAlias / /var/www/${AppName}/${AppName}.wsgi
+    WSGIPassAuthorization On
     <Directory /var/www/${AppName}/${AppName}/>
         Order allow,deny
         Allow from all
