Trying to serve over HTTPS and redirect HTTP to HTTPS.

--- a/template.conf
+++ b/template.conf
@@ -4,7 +4,7 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-    SSLEngine on
+    SSLEngine On
     ServerName ${Domain}
     WSGIScriptAlias / /var/www/${AppName}/${AppName}.wsgi
     WSGIPassAuthorization On
