Wrote MultiBiMap<K, V> for use in Books. Acts like a function, mapping a domain (keys) onto a range (values), such that multiple keys can map to the same value but not vice versa. Used to map barcodes to isbns.
Modified SHA in hash.ts to not hash when crypto.subtle is not available
instead of just failing (throwing an exception).

Trying to revert to HTTP on Apache for now so we can demo something.
Client-side hashing will be disabled for now.

--- a/template.conf
+++ b/template.conf
@@ -1,13 +1,6 @@
 <VirtualHost *:80>
     ServerName ${Domain}
-    Redirect / https://${Domain}
-</VirtualHost>
-
-<VirtualHost *:443>
-    SSLEngine on
-    ServerName ${Domain}
     WSGIScriptAlias / /var/www/${AppName}/${AppName}.wsgi
-    WSGIPassAuthorization On
     <Directory /var/www/${AppName}/${AppName}/>
         Order allow,deny
         Allow from all
@@ -18,3 +11,24 @@
         Allow from all
     </Directory>
 </VirtualHost>
+
+#<VirtualHost *:80>
+#    ServerName ${Domain}
+#    Redirect / https://${Domain}
+#</VirtualHost>
+#
+#<VirtualHost *:443>
+#    SSLEngine on
+#    ServerName ${Domain}
+#    WSGIScriptAlias / /var/www/${AppName}/${AppName}.wsgi
+#    WSGIPassAuthorization On
+#    <Directory /var/www/${AppName}/${AppName}/>
+#        Order allow,deny
+#        Allow from all
+#    </Directory>
+#    Alias /dist /var/www/${AppName}/${AppName}/dist
+#    <Directory /var/www/${AppName}/${AppName}/dist/>
+#        Order allow,deny
+#        Allow from all
+#    </Directory>
+#</VirtualHost>
