--- a/TexDBook/package.json
+++ b/TexDBook/package.json
@@ -43,8 +43,7 @@
     "react-router-dom": "^4.2.2",
     "jquery": "^3.3.1",
     "bootstrap": "^4.1.1",
-    "reactstrap": "^6.0.1",
-    "node-isbn": "^1.4.0"
+    "reactstrap": "^6.0.1"
   },
   "main": "dist/TexDBook.js",
   "scripts": {
