--- a/TexDBook/package.json
+++ b/TexDBook/package.json
@@ -33,6 +33,7 @@
     "@types/react-router": "^4.0.25",
     "@types/react-router-dom": "^4.2.6",
     "@types/reactstrap": "^5.0.26",
+    "@types/file-saver": "^1.3.0",
     "@types/node": "^10.0.6"
   },
   "dependencies": {
@@ -43,7 +44,8 @@
     "react-router-dom": "^4.2.2",
     "jquery": "^3.3.1",
     "bootstrap": "^4.1.1",
-    "reactstrap": "^6.0.1"
+    "reactstrap": "^6.0.1",
+    "file-saver": "^1.3.8"
   },
   "main": "dist/TexDBook.js",
   "scripts": {
