--- a/TexDBook/package.json
+++ b/TexDBook/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/clean-webpack-plugin": "^0.1.2",
+    "@types/compression-webpack-plugin": "^0.4.2",
     "@types/file-saver": "^1.3.0",
     "@types/html-webpack-plugin": "^2.30.3",
     "@types/node": "^10.0.6",
@@ -30,6 +31,7 @@
     "@types/reactstrap": "^5.0.26",
     "@types/webpack": "^4.4.0",
     "clean-webpack-plugin": "^0.1.19",
+    "compression-webpack-plugin": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^4.3.0",
     "typescript": "^2.8.3",
@@ -44,7 +46,8 @@
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "reactstrap": "^6.0.1"
+    "reactstrap": "^6.0.1",
+    "webcrypto-shim": "^0.1.4"
   },
   "main": "dist/client.js",
   "scripts": {
