--- a/TexDBook/package.json
+++ b/TexDBook/package.json
@@ -46,8 +46,7 @@
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "reactstrap": "^6.0.1",
-    "webcrypto-shim": "^0.1.4"
+    "reactstrap": "^6.0.1"
   },
   "main": "dist/client.js",
   "scripts": {
